--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -1,9 +1,15 @@
 $primary-bg-color: #ffffff;
 $secondary-bg-color: rgba(240, 197, 46, 0.5);
 
-$primary-text-color: #000000;
-$secondary-text-color: #ffffff;
+$primary-text-color: #464646;
+$secondary-text-color: #000000;
 
+$primary-text-size: 15px;
+$primary-text-height: 30px;
+
+$primary-font-family: "Open Sans", "Arial", sans-serif;
+$secondary-font-family: "Gilroy", "Arial", sans-serif;
+
+$mobile-width: 320px;
+$tablet-width: 768px;
 $desktop-width: 1200px;
-$retina-dpi: 144dpi;
-$retina-dppx: 1.5dppx;
