--- a/src/sass/blocks/slider.scss
+++ b/src/sass/blocks/slider.scss
@@ -33,15 +33,28 @@
   }
 }
 
-// #toggle-1:checked ~ .slide--one,
-// #toggle-2:checked ~ .slide--second,
-// #toggle-3:checked ~ .slide--three {
-//   display: flex;
-// }
-//
-// #toggle-1:checked ~ .slider__controls label[for="toggle-1"],
-// #toggle-2:checked ~ .slider__controls label[for="toggle-2"],
-// #toggle-3:checked ~ .slider__controls label[for="toggle-3"] {
-//   opacity: 0.3;
-//   cursor: default;
-// }
+@keyframes slider-anim {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+#toggle-1:checked ~ .slide--one,
+#toggle-2:checked ~ .slide--second,
+#toggle-3:checked ~ .slide--three {
+  display: flex;
+  animation-name: slider-anim;
+  animation-duration: 0.5s;
+}
+
+#toggle-1:checked ~ .slider__controls label[for="toggle-1"],
+#toggle-2:checked ~ .slider__controls label[for="toggle-2"],
+#toggle-3:checked ~ .slider__controls label[for="toggle-3"] {
+  opacity: 0.3;
+  cursor: default;
+}
