--- a/src/sass/global/global-styles.scss
+++ b/src/sass/global/global-styles.scss
@@ -1,14 +1,22 @@
 body {
-  max-width: $desktop-width;
+  min-width: $desktop-width;
 
   @include primary-font;
 }
 
-.global-wrapper {
+.container {
+  width: 1160px;
   margin: 0 auto;
+  padding: 0 20px;
 }
 
 ul {
   margin: 0;
   padding: 0;
+}
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
 }
