--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -13,3 +13,6 @@ $secondary-font-family: "Gilroy", "Arial", sans-serif;
 $mobile-width: 320px;
 $tablet-width: 768px;
 $desktop-width: 1200px;
+
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
