--- a/src/sass/blocks/btn.scss
+++ b/src/sass/blocks/btn.scss
@@ -5,9 +5,9 @@
   text-align: center;
   font-family: $secondary-font-family;
   font-size: 18px;
+  font-weight: 700;
   letter-spacing: 4px;
   text-transform: uppercase;
-  font-weight: 700;
   text-decoration: none;
   color: $secondary-text-color;
 
@@ -15,7 +15,10 @@
   box-shadow: inset 0 -11px 0 0 #ffffff,
               inset 0 11px 0 0 #ffffff;
 
+  transition-duration: 0.5s;
+
   &:hover {
+    transition-duration: 0.5s;
     box-shadow: none;
   }
   &:active {
