--- a/src/sass/blocks/main-menu.scss
+++ b/src/sass/blocks/main-menu.scss
@@ -1,25 +1,43 @@
+.main-menu {
+  &--footer {
+    display: flex;
+    margin-left: -18px;
+    flex-basis: 463px;
+    justify-content: space-between;
+  }
+}
+
 .main-menu__list {
   display: flex;
-  flex-basis: 1040px;
   flex-wrap: wrap;
-  justify-content: space-between;
+  flex-basis: 1040px;
+  align-items: baseline;
 }
 
 .main-menu__item {
-  margin-right: 8%;
+  margin-right: 17%;
   margin-left: 20px;
 
-  &--catalog {
-    margin-right: auto;
-  }
   &:first-child {
-    margin-left: 0;
+    margin-left: 0%;
+    margin-right: auto;
   }
   &:last-child {
     margin-right: 0;
   }
   &:nth-child(2) {
     margin-right: 1%;
+  }
+  &:nth-child(3) {
+    margin-right: 8%;
+  }
+  &--catalog {
+    position: relative;
+    padding-bottom: 160px;
+
+    &:hover .main-menu__inner-list {
+    display: flex;
+    }
   }
 }
 
@@ -46,7 +64,9 @@
   letter-spacing: 4px;
   &--catalog {
     position: relative;
+    width: 50%;
     padding-right: 20px;
+
     &::after,
     &::before {
       content: "";
@@ -65,15 +85,28 @@
       transform: rotate(90deg);
     }
   }
+  &--color {
+    color: #ffffff;
+  }
 }
 
 .main-menu__inner-list {
+  position: absolute;
+  left: -55px;
+  z-index: 400;
+
   display: none;
-  flex-basis: 650px;
-  max-width: 650px;
+  width: 1160px;
+  padding-bottom: 40px;
+  padding-left: 58px;
+  padding-right: 389px;
   margin-top: 30px;
+  flex-basis: 650px;
   flex-wrap: wrap;
   align-items: baseline;
+
+  background-color: #f7e296;
+  box-sizing: border-box;
 }
 
 .main-menu__inner-item {
@@ -82,6 +115,6 @@
 
   &:last-child {
     margin-right: 0;
-    padding-right: 5%;
+    padding-right: 25%;
   }
 }
