--- a/src/sass/blocks/popular.scss
+++ b/src/sass/blocks/popular.scss
@@ -1,5 +1,6 @@
 .popular {
   display: flex;
+  padding-bottom: 170px;
   flex-wrap: wrap;
   flex-basis: 1040px;
   align-items: baseline;
@@ -13,6 +14,7 @@
   padding-top: 160px;
 
   text-decoration: none;
+
   &::before {
     content: "";
     position: absolute;
@@ -72,9 +74,11 @@
   }
   &:hover::before {
     opacity: 1;
+    transition-duration: 0.5s;
   }
   &:active::after {
     opacity: 0.5;
+    transition-duration: 0.5s;
   }
 }
 
