Оформил страницу каталога

--- a/src/sass/blocks/logo.scss
+++ b/src/sass/blocks/logo.scss
@@ -1,5 +1,6 @@
 .logo {
   display: block;
+  transition-duration: 0.5s;
 }
 
 .logo__title {
@@ -12,5 +13,23 @@
 
   &--color {
     color: #ffc600;
+  }
+}
+
+.logo[href]:not(.page-footer__logo) {
+  margin-right: 100%;
+}
+
+.logo[href] {
+  text-decoration: none;
+  box-sizing: border-box;
+
+  &:hover {
+    opacity: 0.6;
+    transition-duration: 0.5s;
+  }
+  &:active {
+    opacity: 0.3;
+    transition-duration: 0.5s;
   }
 }
