--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -25,6 +25,7 @@
 @import "blocks/slider.scss";
 @import "blocks/social-icons.scss";
 @import "blocks/social-link.scss";
+@import "blocks/sort.scss";
 @import "blocks/table.scss";
 @import "blocks/user-panel.scss";
 @import "blocks/page-footer.scss";
