--- a/src/sass/blocks/popup-form.scss
+++ b/src/sass/blocks/popup-form.scss
@@ -1,3 +1,112 @@
 .popup-form {
   display: none;
+  background-color: #ffffff;
+  box-shadow: 0px 8px 28px -5px rgba(0,0,0,0.75);
+
+  animation-name: form-visible;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-out;
+
+  &--active {
+    display: block;
+  }
+}
+
+.popup-form__wrapper {
+  position: relative;
+  display: flex;
+  width: 960px;
+  padding: 90px 100px;
+  box-sizing: border-box;
+
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.popup-form__label {
+  &--name {
+    margin-right: 40px;
+  }
+  &--name,
+  &--email {
+    width: 360px;
+    margin-bottom: 35px;
+  }
+  &--message {
+    width: 100%;
+  }
+}
+
+.popup-form__input,
+.popup-form__textarea {
+  width: 100%;
+  padding: 15px;
+
+  font-family: $primary-font-family;
+  font-size: 14px;
+  color: $secondary-text-color;
+
+  background-color: #e6e6e6;
+  opacity: 0.6;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+
+  &:hover {
+    opacity: 0.8;
+  }
+  &:active {
+    outline: none;
+  }
+  &:focus {
+    color: #464646;
+    background: none;
+    box-shadow: 0 0 0 3px #f7e296
+  }
+}
+
+.popup-form__textarea {
+  min-height: 125px;
+  margin-bottom: 45px;
+  resize: none;
+}
+
+.popup-form__label-text {
+  margin-bottom: 10px;
+
+  font-family: $secondary-font-family;
+  font-size: 18px;
+  font-weight: 700;
+  color: $secondary-text-color;
+  letter-spacing: 1px;
+}
+
+.popup-form__btn {
+  background: none;
+  border: none;
+  outline: none;
+  background-color: #f0c52e;
+  box-shadow: inset 0 -7px 0 0 #ffffff,
+              inset 0 7px 0 0 #ffffff;
+}
+
+.popup-form__btn-close {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+}
+
+@keyframes form-visible {
+  0% {
+    left: 50%;
+    top: 2200px;
+    transform: scale(0) translateX(-50%);
+    opacity: 0.5;
+  }
+  100% {
+    left: 50%;
+    top: 1100px;
+    transform: scale(1) translateX(-50%);
+    opacity: 1;
+  }
 }
