--- a/src/sass/blocks/popup-map.scss
+++ b/src/sass/blocks/popup-map.scss
@@ -1,3 +1,39 @@
 .popup-map {
   display: none;
+  width: 960px;
+  height: 559px;
+
+  background: #ffffff url("../img/map-big.jpg");
+  box-shadow: 0px 8px 28px -5px rgba(0,0,0,0.75);
+
+  animation-name: map-visible;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-out;
+
+  &--active {
+    display: block;
+  }
+}
+
+.popup-map__wrapper {
+  position: relative;
+}
+
+.popup-map__btn-close {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+}
+
+@keyframes map-visible {
+  0% {
+    left: 60%;
+    transform: scale(0) translateX(-60%);
+    opacity: 0.5;
+  }
+  100% {
+    left: 50%;
+    transform: scale(1) translateX(-50%);
+    opacity: 1;
+  }
 }
