--- a/src/sass/blocks/popular.scss
+++ b/src/sass/blocks/popular.scss
@@ -22,7 +22,7 @@
     width: 160px;
     height: 160px;
 
-    background-color: $secondary-bg-color;
+    background-color: #f0c52e;
     opacity: 0.5;
   }
   &::after {
