--- a/src/sass/blocks/slide.scss
+++ b/src/sass/blocks/slide.scss
@@ -7,7 +7,7 @@
       content: "02";
     }
   }
-  &--three .slide__description {
+  &--third .slide__description {
     &::after {
       content: "03";
     }
