--- a/src/sass/global/global-wrapper.scss
+++ b/src/sass/global/global-wrapper.scss
@@ -7,7 +7,7 @@
 
 .global-wrapper__popup-form {
   position: absolute;
-  top: 1100px;
+  bottom: 386px;
   left: 50%;
   transform: translateX(-50%);
 }
