--- a/src/sass/global/mixins.scss
+++ b/src/sass/global/mixins.scss
@@ -24,3 +24,11 @@
   line-height: 58px;
   color: $secondary-text-color;
 }
+
+@mixin clearfix {
+  &::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
