--- a/src/sass/blocks/btn.scss
+++ b/src/sass/blocks/btn.scss
@@ -1,7 +1,6 @@
 .btn {
   display: block;
   width: 220px;
-
   text-align: center;
   font-family: $secondary-font-family;
   font-size: 18px;
@@ -11,17 +10,15 @@
   text-decoration: none;
   color: $secondary-text-color;
 
-  background-color: #f0c52e;
-  box-shadow: inset 0 -11px 0 0 #ffffff,
-              inset 0 11px 0 0 #ffffff;
-
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 32%,
+                                         #f0c52e 32%, #f0c52e 64%,
+                                         rgba(0, 0, 0, 0) 64%, rgba(0, 0, 0, 0) 100%);
   transition-duration: 0.5s;
-
-  &:hover {
-    transition-duration: 0.5s;
-    box-shadow: none;
-  }
-  &:active {
-    color: rgba(0, 0, 0, 0.3);
-  }
+}
+.btn:hover {
+  background: #f0c52e;
+  transition-duration: 0.5s;
+}
+.btn:active {
+  color: rgba(0, 0, 0, 0.3);
 }
