--- a/src/sass/blocks/page-main.scss
+++ b/src/sass/blocks/page-main.scss
@@ -1,10 +1,8 @@
 .page-main {
   position: relative;
-  top: -111px;
-  margin-bottom: -24px;
+  margin-bottom: 86px;
 
   &--secondary {
-    top: 0;
     margin: 0 auto;
   }
 }
@@ -32,12 +30,13 @@
 
 .page-main__wrapper {
   position: relative;
-  display: flex;
-  vertical-align: middle;
-  flex-basis: 1200px;
 
+  background: rgba(238,238,238,1);
+  background: linear-gradient(to right, rgba(238,238,238,1) 0%, rgba(238,238,238,1) 32%, rgba(255,255,255,1) 32%, rgba(255,255,255,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#ffffff', GradientType=1 );
   &::before {
     content: "";
+    z-index: 2;
     position: absolute;
     top: 0;
     display: block;
