--- a/src/sass/blocks/pagination.scss
+++ b/src/sass/blocks/pagination.scss
@@ -1,14 +1,16 @@
 .pagination {
   display: flex;
   width: 100%;
-  padding: 20px 0;
 
   text-align: center;
   background-color: #ebebeb;
 }
 
 .pagination__link {
+  display: block;
   margin-right: 30px;
+  padding: 20px 0;
+  padding-top: 23px;
 
   font-family: $secondary-font-family;
   font-size: 16px;
@@ -20,17 +22,36 @@
 
   opacity: 0.3;
 
-  &:first-child {
-    margin-right: 240px;
-    margin-left: 30px;
+  &:hover {
+    opacity: 0.6;
+  }
+  &:active {
     opacity: 1;
+  }
+  &:first-child,
+  &:last-child {
+    padding-left: 30px;
+    padding-right: 30px;
+
+    opacity: 1;
+
+    &:hover {
+      background: rgba(0, 0, 0, 0.08);
+    }
+    &:active {
+      background: rgba(0, 0, 0, 0.38);
+      opacity: 0.3;
+    }
+  }
+  &:first-child {
+    margin-right: 210px;
   }
   &:last-child {
     margin-left: auto;
-    margin-right: 30px;
-    opacity: 1;
+    margin-right: 0;
   }
   &--active {
     opacity: 1;
+    cursor: default;
   }
 }
