--- a/src/sass/blocks/popup-form.scss
+++ b/src/sass/blocks/popup-form.scss
@@ -4,7 +4,7 @@
   box-shadow: 0px 8px 28px -5px rgba(0,0,0,0.75);
 
   animation-name: form-visible;
-  animation-duration: 1.5s;
+  animation-duration: 0.5s;
   animation-timing-function: ease-out;
 
   &--active {
@@ -99,13 +99,13 @@
 @keyframes form-visible {
   0% {
     left: 50%;
-    top: 2200px;
+    bottom: 286px;
     transform: scale(0) translateX(-50%);
     opacity: 0.5;
   }
   100% {
     left: 50%;
-    top: 1100px;
+    bottom: 386px;
     transform: scale(1) translateX(-50%);
     opacity: 1;
   }
