--- a/src/sass/blocks/products.scss
+++ b/src/sass/blocks/products.scss
@@ -1,6 +1,5 @@
 .products {
-  width: 68%;
-  margin-right: auto;
+  width: 760px;
 }
 
 .products__wrapper {
@@ -45,6 +44,13 @@
       opacity: 0.2;
     }
   }
+  &:hover .products__buttons {
+    display: block;
+  }
+  &:hover .products__img {
+    opacity: 0.7;
+    transition-duration: 1s;
+  }
 }
 
 .products__description {
@@ -80,11 +86,36 @@
   display: none;
   width: 100%;
   height: 380px;
-  padding-top: 150px;
+  padding-top: 180px;
 
   box-sizing: border-box;
   text-align: center;
   background-color: rgba(0, 0, 0, 0.1);
+}
+
+.products__btn {
+  margin: 0 auto;
+
+  text-decoration: none;
+  border: none;
+  outline: none;
+
+  &--compare {
+    margin-top: 20px;
+
+    font-family: $primary-font-family;
+    font-size: 13px;
+    color: $secondary-text-color;
+    opacity: 0.5;
+    background: none;
+
+    &:hover {
+      opacity: 1;
+    }
+    &:active {
+      opacity: 0.2;
+    }
+  }
 }
 
 .products__pagination {
