--- a/src/sass/blocks/search.scss
+++ b/src/sass/blocks/search.scss
@@ -1,3 +1,12 @@
+.search {
+  &:hover {
+    opacity: 0.6;
+  }
+  &:active {
+    opacity: 0.3;
+  }
+}
+
 .search__icon {
   position: absolute;
   left: 4px;
