--- a/src/sass/blocks/services.scss
+++ b/src/sass/blocks/services.scss
@@ -64,17 +64,9 @@
 .services__toggle {
   margin-bottom: 34px;
   width: 157px;
-  box-shadow: inset 0 -11px 0 0 #e5e5e5,
-              inset 0 11px 0 0 #e5e5e5;
-  &:first-child {
-    box-shadow: inset 0 -11px 0 0 #e5e5e5,
-                inset 0 11px 0 0 #ffffff;
-  }
+
   &:last-child {
     margin-bottom: 0;
-  }
-  &:hover {
-    box-shadow: none;
   }
 }
 
@@ -82,8 +74,7 @@
 #btn-2:checked ~ .services__controls label[for="btn-2"],
 #btn-3:checked ~ .services__controls label[for="btn-3"] {
   padding-right: 118px;
-  box-shadow: none;
-  background-color: #000000;
+  background: #000000;
   color: #f7e184;
   border: 4px solid #000000;
   border-right: none;
