--- a/src/sass/blocks/sort.scss
+++ b/src/sass/blocks/sort.scss
@@ -18,6 +18,7 @@
 
 .sort__list {
   position: relative;
+  z-index: 3;
   margin-left: 50px;
   margin-top: 18px;
   list-style: none;
@@ -62,7 +63,6 @@
   &:last-child {
     margin-right: 0;
   }
-
   &--active {
     opacity: 1;
     cursor: default;
